<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar_include"
        layout="@layout/pos_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar_include"
        android:background="@color/blue"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/fifty_dp"
            android:layout_gravity="center"
            android:contentDescription="@string/content_description"
            android:tint="@color/app_orange"
            app:srcCompat="@drawable/ic_check_circle" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/success"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/medium_large_sized_text"
            android:textStyle="bold" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/success_message_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/five_dp"
            android:gravity="center"
            android:lineSpacingExtra="@dimen/four_dp"
            android:text="@string/operation_was_completed_successfully"
            android:textColor="@color/white"
            android:textSize="@dimen/medium_sized_text" />

        <Button
            android:id="@+id/success_close_button"
            style="@style/AppButton.RoundOrangeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/close" />

    </LinearLayout>
</RelativeLayout>