<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/colorPrimary"
    app:cardCornerRadius="20dp"
    android:layout_margin="5dp"
    app:cardElevation="3dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/activity_horizontal_margin">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/icon"
            android:layout_gravity="center"
            android:contentDescription="@string/content_description"
            app:srcCompat="@drawable/ic_sentiment_very_dissatisfied" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/error"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/large_sized_text"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/message_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/five_dp"
            android:gravity="center"
            android:lineSpacingExtra="@dimen/four_dp"
            android:textColor="@color/white"
            android:textSize="@dimen/medium_sized_text" />

        <Button
            android:id="@+id/close_btn"
            style="@style/AppButton.RoundOrangeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/ten_dp"
            android:text="@string/close" />
    </LinearLayout>
</androidx.cardview.widget.CardView>